infrastructure/workloads/base/web-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app.kubernetes.io/name: web-app
    app.kubernetes.io/part-of: payu
    app.kubernetes.io/component: frontend
    app.kubernetes.io/version: 1.18.74
    app.kubernetes.io/managed-by: platform-team
    team: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-app
        app.kubernetes.io/part-of: payu
        app.kubernetes.io/component: frontend
        app.kubernetes.io/version: 1.18.74
        app.kubernetes.io/managed-by: platform-team
        team: frontend
    spec:
      securityContext:
        runAsNonRoot: true
      serviceAccountName: web-app
      terminationGracePeriodSeconds: 30
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app.kubernetes.io/name: web-app
      volumes:
      - name: tmp
        emptyDir: {}
      containers:
      - name: app
        image: image-registry.openshift-image-registry.svc:5000/payu-dev/web-app:1.18.74
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        readinessProbe:
          httpGet:
            path: /api/health
            port: 8080
            httpHeaders:
            - name: X-Probe
              value: readiness
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api/health
            port: 8080
            httpHeaders:
            - name: X-Probe
              value: liveness
          initialDelaySeconds: 60
          periodSeconds: 15
        startupProbe:
          httpGet:
            path: /api/health
            port: 8080
            httpHeaders:
            - name: X-Probe
              value: liveness
          initialDelaySeconds: 30
          periodSeconds: 5
          failureThreshold: 90
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 5"]
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 1Gi
