infrastructure/workloads/base/web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  labels:
    app.kubernetes.io/name: web-app
    app.kubernetes.io/part-of: payu
    app.kubernetes.io/version: 1.5.13
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: web-app
  ports:
  - port: 8080
    targetPort: 8080
    name: http
