infrastructure/workloads/base/web-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-app
  labels:
    app.kubernetes.io/name: web-app
    app.kubernetes.io/part-of: payu
    app.kubernetes.io/component: frontend
    app.kubernetes.io/version: 1.5.7
    team: frontend
spec:
  to:
    kind: Service
    name: web-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
